--- a/app/views/static_pages/projects.html.erb
+++ b/app/views/static_pages/projects.html.erb
@@ -4,12 +4,12 @@
         <div class="row">
             <div class="col-md-4 col-md-offset-1">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                    <img class="img-responsive project" src="http://placehold.it/700x300" alt="">
                 </a>
             </div>
             <div class="col-md-6">
                 <h3>Personal Website</h3>
-                <p>This website was my first attempt at a completed rails application, containing a blog, tags and comments functionality.  I used Bootstrap for a lot of the styling, but particularly for the home page (and to practice my CSS-fu), I wanted to move away from the standard 'Bootstrap' look and try something different.</p>
+                <p>This website was my first attempt at a completed rails application, containing a blog, tags and comments functionality.  I used Bootstrap for a lot of the styling, but particularly for the home page (and to practice my CSS-fu), I tried to move away from the standard 'Bootstrap' look and create something different.</p>
                 <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
                 <a class="btn btn-primary" href="https://github.com/larafinnegan/site" target="_blank">View Source Code <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
